--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 <img src="https://via.placeholder.com/150" alt="Электронная книга">
                 <h2>Электронная книга</h2>
                 <p>Цена: 500₽</p>
-                <button class="add-to-cart">Добавить в корзину</button>
+                <button onclick="addToCart(1, 'Электронная книга', 500)">Добавить в корзину</button>
             </div>
             <div class="product" data-id="2" data-name="Музыкальный альбом" data-price="300">
                 <img src="https://via.placeholder.com/150" alt="Музыкальный альбом">
                 <h2>Музыкальный альбом</h2>
                 <p>Цена: 300₽</p>
-                <button class="add-to-cart">Добавить в корзину</button>
+                <button onclick="addToCart(2, 'Музыкальный альбом', 300)">Добавить в корзину</button>
             </div>
         </div>
     </main>
