--- a/cart.html
+++ b/cart.html
@@ -15,7 +15,8 @@
     </header>
     <main>
         <div id="cart-container"></div>
-        <p id="total-price"></p>
+        <p id="total-price">Итоговая цена: 0₽</p>
+        <button onclick="clearCart()">Очистить корзину</button>
     </main>
     <script src="static/js/script.js"></script>
 </body>
